--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,12 @@ body {
 	font-family: sans-serif;
 	font-size: 150%;
 	line-height: 1.4;
-	width: 960px;
+	width: 100vw;
 	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	/* transition: all 1s; */
-}
-
-h1, h2 {
 }
 
 /* header styles */
@@ -28,14 +28,15 @@ header p {
 /* section styles */
 section {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	margin-bottom: 5rem;
+	width: max-content;
 }
 section article {
 	border: 1px solid black;
 	box-shadow: 0 2px 14px grey;
 	padding: 2.5%;
-	width: 25%
+	width: 25%;
 }
 article img {
 	display: block;
@@ -44,13 +45,15 @@ article img {
 }
 section p {
   margin: 5px 0;
+  font-size: 16px;
 }
 
 section ul {
   margin-top: 0;
+  font-size: 20px;
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 28px;
   margin-bottom: 10px;
 }
